test/e2e/features/istio/testdata/nginx-bcp-simple-tls.yml
kind: BackendConfigPolicy
apiVersion: gateway.kgateway.dev/v1alpha1
metadata:
  name: backend-tls-policy
  namespace: nginx
spec:
  targetRefs:
  - group: gateway.kgateway.dev
    kind: Backend
    name: nginx-backend-simple
  tls:
    secretRef:
      name: nginx-tls
    sni: "nginx.nginx"
    simpleTLS: true
---
# See nginx-mtls-config.yml for the instructions to generate the certs
apiVersion: v1
kind: Secret
type: kubernetes.io/tls
metadata:
  name: nginx-tls
  namespace: nginx
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURZVENDQWttZ0F3SUJBZ0lVRlFrbnJOS0pkQVY0OENqRDBQNkxkUGZxM1Jjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd096RVpNQmNHQTFVRUF3d1FhMmRoZEdWM1lYa3RjbTl2ZEMxallURVJNQThHQTFVRUNnd0lhMmRoZEdWMwpZWGt4Q3pBSkJnTlZCQVlUQWxWVE1CNFhEVEkyTURjd056RTNOVGN5TUZvWERUTTJNRGN3TkRFM05UY3lNRm93Ck96RVpNQmNHQTFVRUF3d1FhMmRoZEdWM1lYa3RjbTl2ZEMxallURVJNQThHQTFVRUNnd0lhMmRoZEdWM1lYa3gKQ3pBSkJnTlZCQVlUQWxWVE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBcUZlawpiQzZLeEhuN3VDUXVWVz [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURaekNDQWsrZ0F3SUJBZ0lVQXlKQ1FUN0trUXFIaTVGcWZNS2R3ZmttaWE4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd096RVpNQmNHQTFVRUF3d1FhMmRoZEdWM1lYa3RjbTl2ZEMxallURVJNQThHQTFVRUNnd0lhMmRoZEdWMwpZWGt4Q3pBSkJnTlZCQVlUQWxWVE1CNFhEVEkyTURjd056RTNOVGN5TVZvWERUTTJNRGN3TkRFM05UY3lNVm93Ck9qRVlNQllHQTFVRUF3d1BhMmRoZEdWM1lYa3RZMnhwWlc1ME1SRXdEd1lEVlFRS0RBaHJaMkYwWlhkaGVURUwKTUFrR0ExVUVCaE1DVlZNd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURVZmUwTQpHaml4SHo0ZE5DMThKe [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRFVmZTBNR2ppeEh6NGQKTkMxOEp6WElPdGJnSjNaMkE4ZDRJQlQvVzlzTVNLT0JsZy9VL2xjaytJUUlmeHJtMjMwSzJ0ZFpMVjRpaHhQRApaeWgyS0JNZEx1cE5oZjJPQnZyR1gycHV4MUNtUC8yWHBSSVdLSkFWbXVCSHNYUWRoK05vWEpCa093ZWZDVFBsCmh4ZTdNMStUeHRPNmQzNWJCTGxWb2tvWHVOZGpadXhKdDdtdFkwdkM1TE1JYVhJbjRubWcwSTlGYU1KQzA5cmUKUDlTWVFjS2ZDalJTWGdnbzhWMTVuL005TmthbTVSMjNmUzA0TTJpdkxIRVQxZEZ2SXE4RENBZ0Y0akdkdkIrdwpEY0xqSDZXaTZCc25aY [...]
