test/e2e/features/istio/testdata/nginx-mtls-config.yml
# Generate a set of self-signed CA, tls.key, tls.crt, example.key, example.crt for the mtls tests:

# openssl genrsa -out ca.key 2048
# openssl req -x509 -new -nodes -key ca.key -sha256 -days 3650 -out ca.crt \
#  -subj '/CN=kgateway-root-ca/O=kgateway/C=US' \
#  -extensions v3_ca \
#  -config <(printf "[v3_ca]\nbasicConstraints=CA:TRUE\nkeyUsage=keyCertSign,cRLSign\nsubjectKeyIdentifier=hash\nauthorityKeyIdentifier=keyid:always,issuer")

# openssl genrsa -out tls.key 2048
# openssl req -new -key tls.key -out tls.csr \
#  -subj '/CN=kgateway-client/O=kgateway/C=US' \
#  -config <(printf "[req]\ndistinguished_name = req\n[req]\nCN=kgateway-client\nO=kgateway\nC=US\nreq_extensions = v3_req\n[v3_req]\nkeyUsage=digitalSignature,keyEncipherment\nextendedKeyUsage=clientAuth")
# openssl x509 -req -in tls.csr -CA ca.crt -CAkey ca.key -CAcreateserial \
#  -out tls.crt -days 365 -sha256 \
#  -extensions v3_req \
#  -extfile <(printf "[v3_req]\nkeyUsage=digitalSignature,keyEncipherment\nextendedKeyUsage=clientAuth")

# openssl genrsa -out example.key 2048
# openssl req -new -key example.key -out example.csr \
#  -subj '/CN=nginx.nginx/O=nginx/C=US' \
#  -config <(printf "[req]\ndistinguished_name = req\n[req]\nCN=nginx.nginx\nO=nginx\nC=US\nreq_extensions = v3_req\n[v3_req]\nkeyUsage=digitalSignature,keyEncipherment\nextendedKeyUsage=serverAuth")
# openssl x509 -req -in example.csr -CA ca.crt -CAkey ca.key -CAcreateserial \
#  -out example.crt -days 365 -sha256 \
#  -extensions v3_req \
#  -extfile <(printf "[v3_req]\nkeyUsage=digitalSignature,keyEncipherment\nextendedKeyUsage=serverAuth\nsubjectAltName=DNS:nginx.nginx")

apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-conf
  namespace: nginx
data:
  nginx.conf: |
    user nginx;
    worker_processes  1;
    events {
      worker_connections  10240;
    }
    http {
      # cleartext server
      server {
        listen              80;
        server_name         nginx.nginx;

        location / {
          root   /usr/share/nginx/html;
          index  index.html index.htm;
        }
      }

      # Simple TLS server
      server {
        listen              443 ssl;
        server_name         nginx.nginx;
        ssl_certificate     /etc/nginx/example.crt;
        ssl_certificate_key /etc/nginx/example.key;

        location / {
          root   /usr/share/nginx/html;
          index  index.html index.htm;
        }
      }

      # mTLS server
      server {
        listen              543 ssl;
        server_name         nginx.nginx;
        ssl_certificate     /etc/nginx/example.crt;
        ssl_certificate_key /etc/nginx/example.key;

        # Client certificate verification (for mTLS)
        ssl_client_certificate /etc/nginx/ca.crt;  # CA to validate client certs
        ssl_verify_client      on;                 # Require client certs
        ssl_verify_depth       2;

        location / {
          root   /usr/share/nginx/html;
          index  index.html index.htm;
        }
      }
    }
  example.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDeDCCAmCgAwIBAgIUAyJCQT7KkQqHi5FqfMKdwfkmibAwDQYJKoZIhvcNAQEL
[...]
    TGH61C0jMp+bxO3GdtuBR6skiyY4HKtZwXUGgw==
    -----END CERTIFICATE-----

  example.key: |
    -----BEGIN PRIVATE KEY-----
    MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQC4j7MlANlf+gco
[...]
    50QpdjSltcgsKwXSuX9J7hYJ
    -----END PRIVATE KEY-----

  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDYTCCAkmgAwIBAgIUFQknrNKJdAV48CjD0P6LdPfq3RcwDQYJKoZIhvcNAQEL
[...]
    X9miuPc=
    -----END CERTIFICATE-----
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.0
        ports:
        - containerPort: 80
          name: http-web-svc
        - containerPort: 443
          name: https-simple
        - containerPort: 543
          name: https-mtls
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: nginx.conf
            path: nginx.conf
          - key: example.crt
            path: example.crt
          - key: example.key
            path: example.key
          - key: ca.crt
            path: ca.crt
