test/e2e/features/istio/testdata/strict-peer-auth.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "strict"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
